# TribeBot

./: .gitignore  pyproject.toml
src/: main.py  token.env
src/bot/: __init__.py  bot.py  config.py  ext.py
src/bot/cogs/: admin.py
src/bot/data/: config.json  quiz.json  welcome_embed.json
src/bot/quiz/: quiz.py  tribes.py
